# python-fireplan

./: .pre-commit-config.yaml  API-Issues.md  README.md  debug.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  python-package.yml  run-tests.yml  test-and-lint.yaml
fireplan/: __init__.py  __main__.py  models.py
src/fireplan/: __init__.py
tests/: test_alarm.py  test_init.py  test_status.py
